[ticket/11936] Fix Avatar overflow issue in Notification window
PHPBB3-11936

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -836,3 +836,8 @@ form > p.post-notice strong {
 	font-size: 11px;
 }
 
+.notification_text:after {
+	content: '';
+	clear: both;
+	display: block;
+}
